# st-to-text

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirement.txt  singularity.def
script/: create_data.sh  finetune.sh  main.sh
src/: create_data.py  finetune.py  main.py  utils.py
src/dataset/: create_data.py  dataset.py
src/exp/: exp.py  exp_base.py  exp_main.py
src/model/: embed.py  encoder.py  model.py  transformer.py
src/utils/: data_utils.py  exp_utils.py  main_utils.py
tests/: test_datset.py  test_model.py
