[tool.poetry]
name = "st2text"
version = "0.1.0"
description = ""
authors = ["Kodama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.8.0"
accelerate = "^0.34.0"
beautifulsoup4 = "^4.12.3"
evaluate = "^0.4.2"
ipython = "^8.27.0"
ipykernel = "^6.29.5"
isort = "^5.13.2"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
nltk = "^3.9.1"
numpy = "^2.1.1"
pandas = "^2.2.2"
pytest = "^8.3.2"
rouge-score = "^0.1.2"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
selenium = "^4.24.0"
sentencepiece = "^0.2.0"
tensorboard = "^2.17.1"
torch = "^2.4.0"
transformers = "^4.44.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
profile = "black"

[tool.pyright]
venvPath = "/home/kodama/.cache/pypoetry/virtualenvs"
venv = "st2text-QkqkHVLF-py3.12"
reportPrivateImportUsage = "warning"
